[gd_scene load_steps=29 format=3 uid="uid://bdaqbnaj5huih"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_iqss1"]
[ext_resource type="Texture2D" uid="uid://dmug7ld236iu0" path="res://Textures/Player/Tracksuit.png" id="2_0ecj4"]
[ext_resource type="Texture2D" uid="uid://dcchxgp6odls3" path="res://Textures/Player/Head.png" id="3_4jue0"]
[ext_resource type="Texture2D" uid="uid://djvsox1lm115q" path="res://Textures/Player/OverAlls.png" id="3_prtg0"]
[ext_resource type="ArrayMesh" uid="uid://b3otautsskftv" path="res://Meshes/FishingRodMesh.res" id="4_efbha"]
[ext_resource type="Texture2D" uid="uid://cuiw7juqutftn" path="res://Textures/Player/LumberJackOutFit.png" id="4_f3k6p"]
[ext_resource type="Script" path="res://scripts/input_synchronizer.gd" id="5_tg2nt"]
[ext_resource type="Script" path="res://scripts/Items/fishing_rod.gd" id="7_twamc"]
[ext_resource type="Script" path="res://scripts/Items/beer_bottle.gd" id="8_fp3pb"]
[ext_resource type="ArrayMesh" uid="uid://e23i5h1h56ji" path="res://Meshes/BeerBottleMesh.res" id="8_xot23"]
[ext_resource type="ArrayMesh" uid="uid://bstq5nv7c3m5j" path="res://Meshes/BeerMesh.res" id="9_bsfwf"]
[ext_resource type="Texture2D" uid="uid://g2h6nmk582bk" path="res://Textures/CrossHair/dot_normal.png" id="11_dy6x7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5486n"]
albedo_texture = ExtResource("2_0ecj4")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_is08f"]
material = SubResource("StandardMaterial3D_5486n")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ts5sp"]
albedo_texture = ExtResource("3_prtg0")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i8kkk"]
material = SubResource("StandardMaterial3D_ts5sp")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kcbsf"]
albedo_texture = ExtResource("4_f3k6p")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i1bke"]
material = SubResource("StandardMaterial3D_kcbsf")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pcroh"]
albedo_texture = ExtResource("3_4jue0")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wi1g4"]
material = SubResource("StandardMaterial3D_pcroh")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0xwi8"]

[sub_resource type="Animation" id="Animation_qichi"]
resource_name = "Cast"
length = 2.25
step = 0.25
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishingRod:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.866074, -0.25, 0, 0.25, 0, 0.520398, -0.25, 0, 0.25, 0, -0.866074, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 2.25)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishingRod:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.0740746, -0.25, 0, 0.25, 0, -0.452569, -0.25, 0, 0.25, 0, -0.0740746, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 2.25)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FishingRod:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.0564728, -0.25, 0, 0.25, 0, -0.429543, -0.25, 0, 0.25, 0, 0.0564728, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 2.25)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FishingRod:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 2.25)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FishingRod:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 2.25)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FishingRod:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 2.25)
}

[sub_resource type="Animation" id="Animation_qfl3q"]
resource_name = "Idle"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.03333),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.477414, -0.294176, -0.349952), Vector3(0.477414, -0.298241, -0.349952)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.03333),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0427082, 0, 0)]
}

[sub_resource type="Animation" id="Animation_7mnln"]
resource_name = "Move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.52, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.477414, -0.294176, -0.349952), Vector3(0.459791, -0.265105, -0.349952), Vector3(0.477414, -0.294176, -0.349952), Vector3(0.504169, -0.272454, -0.349952)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.02, 0.25, 0.52, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vxnbo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.477414, -0.294176, -0.349952)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FishingRod:rotation:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.866074, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FishingRod:rotation:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.0740746, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FishingRod:rotation:z")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.0564728, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FishingRod:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FishingRod:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FishingRod:position:z")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4q8b5"]
_data = {
"Cast": SubResource("Animation_qichi"),
"Idle": SubResource("Animation_qfl3q"),
"Move": SubResource("Animation_7mnln"),
"RESET": SubResource("Animation_vxnbo")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_7dq7r"]
properties/0/path = NodePath("inputSynchronizer:inputDirection")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("inputSynchronizer:jump")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("inputSynchronizer:use")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("inputSynchronizer:interact")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("inputSynchronizer:sprint")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("Label3D:text")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("Graphics/BodyHolder/TracksuitBody:visible")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath("Graphics/BodyHolder/OverAllsBody:visible")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath("Graphics/BodyHolder/LumberJackBody:visible")
properties/8/spawn = true
properties/8/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nku6m"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Label3D:text")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("Camera3D/Hand/FishingRod:visible")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("Camera3D/Hand/BeerBottle:visible")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
script = ExtResource("1_iqss1")

[node name="Graphics" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="BodyHolder" type="Node3D" parent="Graphics"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0.10602, 0)

[node name="TracksuitBody" type="MeshInstance3D" parent="Graphics/BodyHolder"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.471804, 0)
visible = false
mesh = SubResource("CapsuleMesh_is08f")
skeleton = NodePath("../../..")

[node name="OverAllsBody" type="MeshInstance3D" parent="Graphics/BodyHolder"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.471398, 0)
visible = false
mesh = SubResource("CapsuleMesh_i8kkk")

[node name="LumberJackBody" type="MeshInstance3D" parent="Graphics/BodyHolder"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.471, 0)
visible = false
mesh = SubResource("CapsuleMesh_i1bke")
skeleton = NodePath("../..")

[node name="Head" type="MeshInstance3D" parent="Graphics"]
transform = Transform3D(0.4, 0, 0, 0, 0.25, 0, 0, 0, 0.4, 0, 0.699061, 0)
mesh = SubResource("CapsuleMesh_wi1g4")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0xwi8")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.682412, 0)

[node name="Reach" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2.5)
collision_mask = 7

[node name="Hand" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.477414, -0.294176, -0.349952)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D/Hand"]
libraries = {
"": SubResource("AnimationLibrary_4q8b5")
}
autoplay = "Idle"
playback_default_blend_time = 0.05

[node name="FishingRod" type="MeshInstance3D" parent="Camera3D/Hand"]
transform = Transform3D(0.299655, -2.23518e-08, -0.014383, 0.0109695, 0.194037, 0.228537, 0.00930275, -0.228801, 0.193813, 0, 0, 0)
visible = false
mesh = ExtResource("4_efbha")
script = ExtResource("7_twamc")
durability = 49

[node name="BeerBottle" type="Node3D" parent="Camera3D/Hand"]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, 5, 0, -5, -2.18557e-07, -0.155053, -0.0166222, 0.00356129)
visible = false
script = ExtResource("8_fp3pb")

[node name="BeerBottle" type="MeshInstance3D" parent="Camera3D/Hand/BeerBottle"]
mesh = ExtResource("8_xot23")
skeleton = NodePath("")

[node name="Node3D" type="Node3D" parent="Camera3D/Hand/BeerBottle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00730346)

[node name="Beer" type="MeshInstance3D" parent="Camera3D/Hand/BeerBottle/Node3D"]
mesh = ExtResource("9_bsfwf")
skeleton = NodePath("../../BeerBottle")

[node name="Control" type="Control" parent="Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Camera3D/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_dy6x7")
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="Camera3D/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.64892
anchor_right = 0.5
anchor_bottom = 0.64892
offset_left = -108.5
offset_top = -13.5
offset_right = 108.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="inputSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_7dq7r")
script = ExtResource("5_tg2nt")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nku6m")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.20147, 0)
billboard = 1
text = "Username"
font_size = 35
outline_size = 10
